--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@tailwindcss/vite": "^4.1.10",
     "bootstrap": "^5.3.6",
+    "classnames": "^2.5.1",
     "google-map-react": "^2.2.5",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
